--- a/preclass.Rmd
+++ b/preclass.Rmd
@@ -25,7 +25,9 @@ then this results in 10 exponentially distributed numbers with a rate \(\lambda=
 1. Generate 200 random values from the standard exponential distribution and store them in a vector `exp.draws.1`.  Find the mean and standard deviation of `exp.draws.1`.
 
 ```{r, echo = FALSE}
+# Creating 200 random values from standard exp distribution and storing them into exp.draws.1
 exp.draws.1 <- rexp(200)
+# Mean and sd of exp.draws.1
 mean(exp.draws.1)
 sd(exp.draws.1)
 ```
@@ -33,6 +35,7 @@ sd(exp.draws.1)
 2. Repeat, but change the rate to 0.2, 5, 7.3 and 10, storing the results in vectors called  `exp.draws.0.2`,  `exp.draws.5`,  `exp.draws.7.3` and  `exp.draws.10`. 
 
 ```{r, echo = FALSE}
+# Creating 200 random values from standard exp for each specified rate
 exp.draws.0.2 <- rexp(200, rate = .2)
 exp.draws.5 <- rexp(200, rate = 5)
 exp.draws.7.3 <- rexp(200, rate = 7.3)
@@ -43,33 +46,42 @@ exp.draws.10 <- rexp(200, rate = 10)
 3. The function `plot()` is the generic function in R for the visual display of data. `hist()` is a function that takes in and bins data as a side effect. To use this function, we must first specify what we'd like to plot.
     a. Use the `hist()` function to produce a histogram of your standard exponential distribution. 
 ```{r, echo = FALSE}
+# Draws histogram of standard exponential vector
 hist(exp.draws.1)
 ```
     b. Use `plot()` with this vector to display the random values from your standard distribution in order.
 ```{r, echo = FALSE}
+# Plots all values of the standard exponential vector
 plot(exp.draws.1)    
 ```
 
     c. Now, use `plot()` with two arguments -- any two of your other stored random value vectors -- to create a scatterplot of the two vectors against each other.
 ```{r, echo = FALSE}
+# Plots standard exponential vector on x axis and rate = 5 exponential vector on y axis
 plot(exp.draws.1, exp.draws.5)
 ```
 
 4. We'd now like to compare the properties of each of our vectors. Begin by creating a vector of the means of each of our five distributions in the order we created them and saving this to a variable name of your choice. Using this and other similar vectors, create the following scatterplots and explain in words what is going on:
     a. The five means versus the five rates used to generate the distribution.
 ```{r, echo = FALSE}
+# Vector of means of each exponential distribution vector
 exp.means = c(mean(exp.draws.1), mean(exp.draws.0.2), mean(exp.draws.5), mean(exp.draws.7.3), mean(exp.draws.10))
+# Vector of specified rates of each exponential distribution vector
 exp.rates = c(1, .2, 5, 7.3, 10)
+# Plots means on x axis, rates on y axis
 plot(exp.means, exp.rates)
 ```
     b. The standard deviations versus the rates.
 ```{r, echo = FALSE}
+# Vector of standard deviations of each exponential distribution vector
 exp.sds <- c(sd(exp.draws.1), sd(exp.draws.0.2), sd(exp.draws.5), sd(exp.draws.7.3), sd(exp.draws.10))
+# Plots standard deviations on x axis, rates on y axis
 plot(exp.sds, exp.rates)
 ```
     c. The means versus the standard deviations.
 ```{r, echo = FALSE}
-plot(exp.sds, exp.means)
+# Means on x axis, standard deviations on y axis
+plot(exp.means, exp.sds)
 ```
 
 For each plot, explain in words what's going on.
