--- a/Week 03/pre-class-03.Rmd
+++ b/Week 03/pre-class-03.Rmd
@@ -28,11 +28,55 @@ gapminder
 Use **dplyr** functions to address the following questions:
 
 1. How many unique countries are represented per continent?
+
+```{r}
+# Use dplyr functions to count number of distinct countries by continent
+gapminder %>% group_by(continent) %>% distinct(country) %>% count()
+```
+
 2. Which European nation had the lowest GDP per capita in 1997? 
+
+```{r}
+# First filter to Eurpoe and 1997 then arrange by gdpPercap
+gapminder %>% filter(continent == "Europe" & year == 1997) %>% arrange(gdpPercap)
+```
+
+*Albania was the Eurpoean nation with the lowest GDP per capita in 1997 with 3193.*
+
 3. According to the data available, what was the average life expectancy across each continent in the 1980s?
+
+```{r}
+# First filter to 1980s then group by continent before finding mean
+gapminder %>% filter(year < 1990 & year > 1979) %>% group_by(continent) %>%
+  summarize(avg_life = mean(lifeExp))
+```
+
 4. What 5 countries have the highest total GDP over all years combined?
+
+```{r}
+# Create new variable with new GDP column
+gapminder1 <- mutate(gapminder, GDP = gdpPercap * pop)
+
+# Group by country, sum GDP through all years, then arrange in descending order
+gapminder1 %>% group_by(country) %>% summarize(totalGDPAllYears = sum(GDP)) %>% arrange(desc(totalGDPAllYears))
+```
+
+*The 5 countries with the highest total GDP over all years combined are the US, Japan, China, Germany, and the UK.*
+
 5. What countries and years had life expectancies of _at least_ 80 years? _N.b. only output the columns of interest: country, life expectancy and year (in that order)._
+
+```{r}
+# Filter to life expectancy of 80 or greater, then use select for desired columns and years
+gapminder %>% filter(lifeExp >= 80) %>% select(country, lifeExp, year)
+```
+
 6. What 10 countries have the strongest correlation (in either direction) between life expectancy and per capita GDP?
+
+```{r}
+# Group by country and then use the cor function to find correlation between life expectancy and GDP per capita
+gapminder %>% group_by(country) %>% summarize(correlation = cor(lifeExp, gdpPercap)) %>% arrange(desc(correlation))
+```
+
 7. Which combinations of continent (besides Asia) and year have the highest average population across all countries? _N.b. your output should include all results sorted by highest average population_. With what you already know, this one may stump you. See [this Q&A](http://stackoverflow.com/q/27207963/654296) for how to `ungroup` before `arrange`ing. This also [behaves differently in more recent versions of dplyr](https://github.com/hadley/dplyr/releases/tag/v0.5.0).
 8. Which three countries have had the most consistent population estimates (i.e. lowest standard deviation) across the years of available data? 
 9. Subset **gm** to only include observations from 1992 and store the results as **gm1992**. What kind of object is this?
