--- a/Week_09/week-09-preclass.Rmd
+++ b/Week_09/week-09-preclass.Rmd
@@ -20,16 +20,82 @@ options(scipen = 3, digits = 3)
 
 ## Exercises
 
+```{r}
+library(rvest)
+```
+
 1. Read the HTML content of the following URL with a variable called webpage: https://money.cnn.com/data/us_markets/ At this point, it will also be useful to open this web page in your browser.
+
+```{r}
+url  <- "https://money.cnn.com/data/us_markets/"
+cnnMoney <- read_html(url)
+```
+
 2. Get the session details (status, type, size) of the above mentioned URL.
+
+```{r}
+html_session(url)
+```
+
 3. Extract all of the sector names from the “Stock Sectors” table (bottom left of the web page.)
+
+```{r}
+# Extract table 2 column 1 (stock sectors)
+html_table(html_nodes(cnnMoney, "table"))[[2]][[1]]
+```
+
 4. Extract all of the “3 Month % Change” values from the “Stock Sectors” table.
+
+```{r}
+# Extract table 2 column 2 (3 month % change)
+html_table(html_nodes(cnnMoney, "table"))[[2]][[2]]
+``` 
+
 5. Extract the table “What’s Moving” (top middle of the web page) into a data-frame.
+
+```{r}
+# Extract table 1
+html_table(html_nodes(cnnMoney, "table"))[[1]]
+```
 6. Re-construct all of the links from the first column of the “What’s Moving” table.
+
+```{r}
+# Initialize the links using piping, css attribute td class wsod_symbol
+whats_moving_links <- cnnMoney %>% html_nodes(css = "td .wsod_symbol") %>% html_attr("href")
+
+# Paste all of our links
+paste("https://money.cnn.com", whats_moving_links, sep = "")
+```
+
+
 Hint: the base URL is “https://money.cnn.com”
 7. Extract the titles under the “Latest News” section (bottom middle of the web page.)
+
+```{r}
+# 'a' is our href
+html_text(html_nodes(cnnMoney, css = ".HeadlineList a"))
+```
+
 8. To understand the structure of the data in a web page, it is often useful to know what the underlying attributes are of the text you see.
 Extract the attributes (and their values) of the HTML element that holds the timestamp underneath the “What’s Moving” table.
+
+```{r}
+# Get attributes of wsod_disclaimer > span
+html_attrs(html_nodes(cnnMoney, css = ".wsod_disclaimer > span"))
+```
+
 9. Extract the values of the blue percentage-bars from the “Trending Tickers” table (bottom right of the web page.)
 Hint: in this case, the values are stored under the “class” attribute.
+
+```{r}
+# div seems to be an element of scale, and we want the class elements from div
+html_attr(html_nodes(cnnMoney, css = ".scale > div"), "class")
+```
+
 10. Get the links of all of the “svg” images on the web page.
+
+```{r}
+# Extract links from all svg image types
+html_attr(html_nodes(cnnMoney, css = "img[src$='svg']"), "src") 
+```
+
